gccida/c1/add_bound_info
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/add_bound_info/src/dwarf2out.c:9547:48: error: must use 'enum' tag to refer to type 'dwarf_attribute'
void  add_bound_info( dw_die_ref subrange_die, dwarf_attribute bound_attr, tree bound) 
                                               ^
                                               enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/add_bound_info/src/dwarf2out.c:9638:22: error: use of undeclared identifier 'machine_mode'
v11 = gen_rtx_MEM( ( machine_mode)*( ( unsigned __int8 *)v11 + 2), fixed); 
                     ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/add_bound_info/src/obj/dwarf2out.o] Error 1
